@@ -105,21 +105,55 @@ describe Paperclip::UriAdapter do
 
   context "a url with content disposition headers" do
     let(:file_name) { "test_document.pdf" }
-    let(:meta) do
-      {
-        "content-disposition" => "attachment; filename=\"#{file_name}\";",
-      }
-    end
+    let(:filename_from_path) { "paperclip" }
 
     before do
       Paperclip::UriAdapter.any_instance.
         stubs(:download_content).returns(@open_return)
 
-      @uri = URI.parse("https://github.com/thoughtbot/paperclip?file=test")
-      @subject = Paperclip.io_adapters.for(@uri)
+      @uri = URI.parse(
+        "https://github.com/thoughtbot/#{filename_from_path}?file=test")
     end
 
-    it "returns a file name" do
+    it "returns file name from path" do
+      meta["content-disposition"] = "inline;"
+
+      @subject = Paperclip.io_adapters.for(@uri)
+
+      assert_equal filename_from_path, @subject.original_filename
+    end
+
+    it "returns a file name enclosed in double quotes" do
+      file_name = "john's test document.pdf"
+      meta["content-disposition"] = "attachment; filename=\"#{file_name}\";"
+
+      @subject = Paperclip.io_adapters.for(@uri)
+
+      assert_equal file_name, @subject.original_filename
+    end
+
+    it "returns a file name not enclosed in double quotes" do
+      meta["content-disposition"] = "ATTACHMENT; FILENAME=#{file_name};"
+
+      @subject = Paperclip.io_adapters.for(@uri)
+
+      assert_equal file_name, @subject.original_filename
+    end
+
+    it "does not crash when an empty filename is given" do
+      meta["content-disposition"] = "ATTACHMENT; FILENAME=\"\";"
+
+      @subject = Paperclip.io_adapters.for(@uri)
+
+      assert_equal "", @subject.original_filename
+    end
+
+    it "returns a file name ignoring RFC 5987 encoding" do
+      meta["content-disposition"] =
+        "attachment; filename=#{file_name}; filename* = utf-8''%e2%82%ac%20rates"
+
+      @subject = Paperclip.io_adapters.for(@uri)
+
       assert_equal file_name, @subject.original_filename
     end
 
@@ -127,6 +161,9 @@ describe Paperclip::UriAdapter do
       let(:file_name) { "test_document..pdf" }
 
       it "returns a file name" do
+        @uri = URI.parse(
+          "https://github.com/thoughtbot/#{file_name}?file=test")
+        @subject = Paperclip.io_adapters.for(@uri)
         assert_equal file_name, @subject.original_filename
       end
     end
